--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,11 +1,11 @@
 @font-face {
     font-family: JiaLiXianYuanJF-split;
-    src: url(../fonts/JiaLiXianYuanJF-split.woff);
+    src: url(@/fonts/JiaLiXianYuanJF-split.woff);
 }
 
 @font-face {
     font-family: JiaLiDaYuanJF-split;
-    src: url(../fonts/JiaLiDaYuanJF-split.woff);
+    src: url(@/fonts/JiaLiDaYuanJF-split.woff);
 }
 
 
